force-app/main/default/objects/ClickSignTemplate__c/ClickSignTemplate__c.object-meta.xml
<CustomObject>
    <label>ClickSign Template</label>
    <nameField>
        <label>ClickSign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Click Sign Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>