force-app/main/default/objects/ClickSignTemplate__c/fields/AddContractNumber__c.field-meta.xml
<CustomField>
    <fullName>AddContractNumber__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adicionar Número de Contrato</label>
    <type>Checkbox</type>
</CustomField>