force-app/main/default/objects/ClickSignTemplate__c/fields/ButtonLabel__c.field-meta.xml
<CustomField>
    <fullName>ButtonLabel__c</fullName>
    <label>Button Label</label>
    <type>TextArea</type>
</CustomField>