force-app/main/default/objects/ClickSignTemplate__c/fields/ContractNumber__c.field-meta.xml
<CustomField>
    <fullName>ContractNumber__c</fullName>
    <label>Numero do Contrato</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>