force-app/main/default/objects/ClickSignTemplate__c/fields/IsActivate__c.field-meta.xml
<CustomField>
    <fullName>IsActivate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Activate</label>
    <type>Checkbox</type>
</CustomField>