force-app/main/default/objects/ClickSignTemplate__c/fields/JsonContractInformation__c.field-meta.xml
<CustomField>
    <fullName>JsonContractInformation__c</fullName>
    <formula>&apos;[{&quot;id&quot;:&quot;field-1739213819888&quot;,&quot;fieldName&quot;:&quot;ContractNumberFml__c&quot;,&quot;tag&quot;:&quot;{{/numeroContrato}}&quot;,&quot;tagLabel&quot;:&quot;{{numeroContrato}}&quot;}]&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contrato Informação Json</label>
    <type>Text</type>
</CustomField>