force-app/main/default/objects/ClickSignTemplate__c/fields/Mapping__c.field-meta.xml
<CustomField>
    <fullName>Mapping__c</fullName>
    <label>Mapping</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>