force-app/main/default/objects/ClickSignTemplate__c/fields/ObjectMappings2__c.field-meta.xml
<CustomField>
    <fullName>ObjectMappings2__c</fullName>
    <label>ObjectMappings2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>