force-app/main/default/objects/ClickSignTemplate__c/fields/ObjectMappings__c.field-meta.xml
<CustomField>
    <fullName>ObjectMappings__c</fullName>
    <label>ObjectMappings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>