force-app/main/default/objects/ClickSignTemplate__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Select Source</fullName>
            </value>
            <value>
                <fullName>Add Fields</fullName>
            </value>
            <value>
                <fullName>Upload Documents</fullName>
            </value>
            <value>
                <fullName>Preview Documents</fullName>
            </value>
            <value>
                <fullName>Add Recipient</fullName>
            </value>
            <value>
                <fullName>Create button Template</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>