force-app/main/default/objects/ClickSignTemplate__c/fields/VisibilityRule__c.field-meta.xml
<CustomField>
    <fullName>VisibilityRule__c</fullName>
    <label>Visibility Rule</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>