force-app/main/default/objects/ClickSignTemplate__c/fields/VisibilityRules__c.field-meta.xml
<CustomField>
    <fullName>VisibilityRules__c</fullName>
    <label>Visibility Rules</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>