force-app/main/default/objects/ClickSignTemplate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SourceObject__c</columns>
    <columns>IsActivate__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ExternalId__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>